--- a/Infominer.ipynb
+++ b/Infominer.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,8 +16,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/amitgit2510/info_miners/blob/main/Infominer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "3ZDpYqeJy3ov"
       },
@@ -43,7 +54,7 @@
         "id": "_MomYyAcLeAq",
         "outputId": "2b2804b9-f845-45d2-c416-b3f86b5b9e68"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,7 +79,7 @@
         "id": "JhuHqjkD0ldp",
         "outputId": "b7ac470f-916e-4892-e4f2-914304ae3c5f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +103,7 @@
         "id": "jNVgAiXWMzkZ",
         "outputId": "7d1d7984-5b98-4a6a-dbb9-9e0a3d3a492c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +130,7 @@
         "id": "bMj-e7qO09o4",
         "outputId": "2d44fe81-a0eb-49d5-caf3-4727a4805a7e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +556,7 @@
         "id": "oPByu6qZNPvA",
         "outputId": "9e705d8f-ec7b-4a26-d94b-8ca01d3d3305"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +606,7 @@
         "id": "-EbMgHJK1C1j",
         "outputId": "f7b099c4-3111-4b93-8bc0-3133bbe9da8e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1071,7 +1082,7 @@
         "id": "53TQHDprM991",
         "outputId": "f8a94a22-f226-4384-9b88-920ccd3531db"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1170,7 +1181,7 @@
         "id": "Fop6ONi2QuUS",
         "outputId": "4244de06-1cb2-4b39-e5df-3979a2d9220a"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1196,7 +1207,7 @@
         "id": "7zr358HI2y3k",
         "outputId": "57b5dd66-62d8-4484-d37b-ed2500484ae4"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1248,7 +1259,7 @@
         "id": "etO574dpTS0R",
         "outputId": "ecf0057e-63a6-4d15-c8fe-73d62f0564b9"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1271,7 +1282,7 @@
       "metadata": {
         "id": "oxTVv84m2_hI"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1301,7 +1312,7 @@
         "id": "o1AU_l5-Tf2l",
         "outputId": "aec39cd4-9575-4667-cef5-6945f5b22ac6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1348,7 +1359,7 @@
         "id": "-R8qFYI-X9tb",
         "outputId": "3dbc5c92-63f9-4b91-de79-7ef20c11c82f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1376,7 +1387,7 @@
         "id": "6iRTw3DV13aq",
         "outputId": "69ddeb8f-dffe-4f45-ed8b-cd45515c5fff"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1726,7 +1737,7 @@
         },
         "outputId": "b504d3d7-835f-4965-c26c-935a933c8d14"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1767,7 +1778,7 @@
         },
         "outputId": "b008411d-9c15-43b5-dd6d-bb7a9e7a77f0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1805,7 +1816,7 @@
         "id": "bJrgeSvO14Tg",
         "outputId": "183c1e85-19d4-4ada-8087-ccdcc9b3aeaf"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1847,7 +1858,7 @@
         "id": "Ak949YvKO77U",
         "outputId": "1f9989bd-8692-4c55-e55b-9c22f65ebd5c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1938,7 +1949,7 @@
         },
         "outputId": "2250cd75-fa94-4bf7-811f-b3ea96444a26"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1960,6 +1971,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The reason to use linear regression for this problem was that it had only numeric variables which we thought must be explored to fiind the relationship between them."
+      ],
+      "metadata": {
+        "id": "CDjMB_EBK3S8"
+      }
     },
     {
       "cell_type": "code",
@@ -2006,7 +2026,7 @@
         "id": "HuYzXUEcew_m",
         "outputId": "0aaf339b-b7af-4e21-fbc1-c70a2914ce85"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2043,7 +2063,7 @@
         "id": "b5R-vpBHGKzk",
         "outputId": "5e2e6755-d17c-474c-aaaf-7de53e1985bf"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2399,7 +2419,7 @@
         "id": "F-gUCxiKGK7O",
         "outputId": "52777a41-06df-4261-a68a-395c3102196e"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2775,7 +2795,7 @@
         "id": "32xPRWXEGK3n",
         "outputId": "16ca7f93-8359-4e08-a55c-fa5cc40daa11"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2842,7 +2862,7 @@
         "id": "ZBefi8E8GK-8",
         "outputId": "6c5f2117-3a4c-4f95-c119-a5af29e22cb8"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
